--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -30,7 +30,7 @@
                 <option value="3">TF IDF normalized</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-default">Cek!</button>
+            <button type="submit" class="btn btn-primary">Check</button>
           </form>
           <br>
           {% for error in errors %}
