web modified, return multiclass result

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -26,7 +26,7 @@
               <label for="vec_option-box">Fitur</label>
               <select class="form-control" name="vec_option" id="vec_option-box">
                 <option value="1">Doc-Term</option>
-                <option value="2">TF IDF</option>
+                <option value="2" selected>TF IDF</option>
                 <option value="3">TF IDF normalized</option>
               </select>
             </div>
@@ -47,11 +47,11 @@
           <br>
           <div id="keluhans">
             <table class="table table-hover">
-              <thead>
+              <thead class="text-center">
                 <tr>
-                  <th rowspan="2" class="text-center">Teks</th>
-                  <th rowspan="2" class="text-center">Fitur</th>
-                  <th colspan="3">Keluhan/Bukan?</th>
+                  <th rowspan="2">Teks</th>
+                  <th rowspan="2">Fitur</th>
+                  <th colspan="3">Hasil Klasifikasi</th>
                 </tr>
                 <tr>
                   <th>DTL</th>
